@@ -69,6 +69,7 @@ struct mosquitto *context__init(mosq_sock_t sock)
 	packet__cleanup(&context->in_packet);
 	context->out_packet = NULL;
 	context->current_out_packet = NULL;
+	context->out_packet_count = 0;
 
 	context->address = NULL;
 	if((int)sock >= 0){
@@ -158,6 +159,7 @@ void context__cleanup(struct mosquitto *context, bool force_free)
 		context->out_packet = context->out_packet->next;
 		mosquitto__free(packet);
 	}
+	context->out_packet_count = 0;
 #if defined(WITH_BROKER) && defined(__GLIBC__) && defined(WITH_ADNS)
 	if(context->adns){
 		gai_cancel(context->adns);
