@@ -7,6 +7,7 @@ Broker:
   reconnected to the broker. Closes #2167.
 - Fix bridge not reconnectng if the first reconnection attempt fails.
   Closes #2207.
+- Improve QoS 0 outgoing packet queueing.
 
 Clients:
 - If sending mosquitto_sub output to a pipe, mosquitto_sub will now detect
